# Newelle

./: newelle_extension_generator.py
src/: extension.py  extra.py  gtkobj.py  handler.py  llm.py  main.py  meson.build  presentation.py  settings.py  shortcuts.py  stt.py  thread_editing.py  tts.py  window.py
